--- a/main.html
+++ b/main.html
@@ -7,7 +7,17 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<img alt="" src="https://www.linkedin.com/in/akash-gupta-325b301a4/overlay/background-image/">
+	<p>Akash Gupta</p>
+	<a href="www.linkedin.com/in/akash-gupta-325b301a4" target="_blank">My linkdin Profile</a>
+	<h4>Skills</h4>
+	<p>Java , HTML , CSS , Javascript , SQL </p>
+	<h4>Project Section </h4>
+	<p>Weather API</p>
+	<p>E - Commerce</p>
+	<p> Netflix Clone</p>
+	
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
