--- a/main.html
+++ b/main.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Portfolio</title>
 </head>
-
 <body>
-	<img alt="" src="https://www.linkedin.com/in/akash-gupta-325b301a4/overlay/background-image/">
-	<p>Akash Gupta</p>
-	<a href="www.linkedin.com/in/akash-gupta-325b301a4" target="_blank">My linkdin Profile</a>
-	<h4>Skills</h4>
-	<p>Java , HTML , CSS , Javascript , SQL </p>
-	<h4>Project Section </h4>
-	<p>Weather API</p>
-	<p>E - Commerce</p>
-	<p> Netflix Clone</p>
-	
-	
-    <script type="text/javascript" src="./script.js">
-</script>
+  <!-- Profile Image -->
+  <img src="your-image.jpg" alt="Your Name" width="150" height="150">
 
+  <!-- Name -->
+  <h1>Your Name</h1>
+
+  <!-- LinkedIn Profile -->
+  <p><a href="www.linkedin.com/in/akash-gupta-325b301a4" target="_blank">LinkedIn Profile</a></p>
+
+  <!-- Skills Section -->
+  <section id="skills">
+    <h2>Skills</h2>
+    <p>Here are some of my skills:</p>
+    <ul>
+      <li>JavaScript</li>
+      <li>HTML & CSS</li>
+      <li>Python</li>
+      <li>React.js</li>
+    </ul>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects">
+    <h2>Projects</h2>
+    <p>Here are some projects I've worked on:</p>
+    <ul>
+      <li>Portfolio Website</li>
+      <li>Weather App</li>
+      <li>Todo List</li>
+      <li>Personal Blog</li>
+    </ul>
+  </section>
 </body>
-
 </html>
